# DeskPad

./: .gitignore  README.md  README.ru.md  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  system_icons.rs
src-tauri/src/migration/: 0000_init.sql  0001_icon_size.sql
src/api/: index.ts
src/assets/styles/: app.css
src/db/: index.ts
src/db/repositories/: categories.ts  pads.ts
src/i18n/: en.json  index.ts  ru.json
src/modules/categories/: CategoriesMenu.vue
src/modules/categories/composables/: useCategoryModal.ts
src/modules/categories/ui/: CreateCategoryForm.vue
src/modules/pads/: CreatePad.vue  DeskPad.vue
src/modules/pads/composables/: usePad.ts  usePadModal.ts
src/modules/pads/ui/: CreatePadForm.vue
src/modules/pads/utils/: app.ts  http.ts
src/router/: index.ts
src/shared/components/: MessageContainer.vue
src/shared/components/ui/: InputFile.vue
src/shared/composables/: useRender.ts
src/shared/constants/: settings.ts  ui.ts
src/shared/interfaces/: models.ts
src/shared/services/: notify.ts
src/shared/utils/: base64.ts
src/stores/: app-store.ts
src/views/: HomeView.vue  PadsView.vue  SettingsView.vue
